--- a/dom/html/test/forms/test_input_radio_radiogroup.html
+++ b/dom/html/test/forms/test_input_radio_radiogroup.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=343444
+-->
 <head>
   <title>Test for Bug 343444</title>
   <script type="text/javascript" src="/MochiKit/MochiKit.js"></script>
@@ -42,7 +42,7 @@
 <script class="testbody" type="text/javascript">
 /** Test for Bug 343444 **/
 SimpleTest.waitForExplicitFinish();
-SpecialPowers.pushPrefEnv({"set":[["snav.enabled", false]]}, startTest);
+startTest();
 function startTest() {
   document.getElementById("start").focus();
   var count=0;
