--- a/dom/html/test/forms/test_radio_in_label.html
+++ b/dom/html/test/forms/test_radio_in_label.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=229925
+-->
 <head>
   <title>Test for Bug 229925</title>
   <script type="text/javascript" src="/MochiKit/MochiKit.js"></script>
@@ -27,7 +27,7 @@ SimpleTest.waitForExplicitFinish();
 var r1 = document.getElementById("r1");
 var r2 = document.getElementById("r2");
 var s1 = document.getElementById("s1");
-SpecialPowers.pushPrefEnv({"set":[["snav.enabled", false]]}, startTest);
+startTest();
 function startTest() {
   r1.click();
   ok(r1.checked,
