--- a/dom/tests/mochitest/bugs/test_bug265203.html
+++ b/dom/tests/mochitest/bugs/test_bug265203.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=265203
+-->
 <head>
   <title>Test for Bug 265203</title>
   <script src="/tests/SimpleTest/SimpleTest.js"></script>
@@ -96,9 +96,7 @@ function startTest() {
   if (gTestStarted)
     return;
   gTestStarted = true;
-  // Turn off spatial navigation because it hijacks KEY_ArrowRight and KEY_ArrowLeft keydown
-  // events
-  SpecialPowers.pushPrefEnv({"set": [["accessibility.browsewithcaret", true], ["snav.enabled", false]]}, test0);
+  SpecialPowers.pushPrefEnv({"set": [["accessibility.browsewithcaret", true]]}, test0);
 }
 
 SimpleTest.waitForExplicitFinish();
