--- a/js/xpconnect/tests/mochitest/test_isRemoteProxy.html
+++ b/js/xpconnect/tests/mochitest/test_isRemoteProxy.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <script>
+/* eslint-disable prettier/prettier */
 
 async function addFrame(url) {
   let frame = document.createElement("iframe");
