--- a/testing/mochitest/tests/Harness_sanity/test_SpecialPowersSandbox.html
+++ b/testing/mochitest/tests/Harness_sanity/test_SpecialPowersSandbox.html
@@ -16,6 +16,7 @@
  * report the correct diagnostics in the caller scope.
  */
 
+/* eslint-disable prettier/prettier */
 /* globals SpecialPowers, Assert */
 
 async function interceptDiagnostics(func) {
