--- a/devtools/client/debugger/test/mochitest/examples/doc-sourcemap-bogus.html
+++ b/devtools/client/debugger/test/mochitest/examples/doc-sourcemap-bogus.html
@@ -1,6 +1,6 @@
- 
-
-
+ <!-- This Source Code Form is subject to the terms of the Mozilla Public
+    - License, v. 2.0. If a copy of the MPL was not distributed with this
+    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -9,6 +9,7 @@
   </head>
 
   <body>
-    <script src="bogus-map.js"></script>
+    <script src="non-existant-map.js"></script>
+    <script src="map-with-failed-original-request.js"></script>
   </body>
 </html>
