--- a/xpcom/reflect/xptcall/porting.html
+++ b/xpcom/reflect/xptcall/porting.html
@@ -1,6 +1,6 @@
-
-
-
+<!-- This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this
+   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <html>
 <head>
@@ -192,19 +192,6 @@ XPConnect test called <i>TestXPC</i> in
 <a
 href="http://lxr.mozilla.org/mozilla/source/js/xpconnect/tests">mozilla/js/xpconnect/tests
 </a>.
-
-<p>
-
-Getting these ports done is very important. Please let <a
-href="mailto:jband@netscape.com">me</a> know if you are interested in doing one.
-I'll answer any questions as I get them.
-
-<p>
-
-<a
-href="http://lxr.mozilla.org/mozilla/source/xpcom/reflect/xptcall/status.html">
-Porting Status
-</a>
 
 </blockquote>
 
