--- a/accessible/tests/mochitest/events/test_namechange.xhtml
+++ b/accessible/tests/mochitest/events/test_namechange.xhtml
@@ -9,10 +9,8 @@
   <script src="chrome://mochikit/content/tests/SimpleTest/SimpleTest.js" />
   <script src="chrome://mochikit/content/chrome-harness.js"/>
 
-  <script type="application/javascript"
-          src="../common.js" />
-  <script type="application/javascript"
-          src="../events.js" />
+  <script src="../common.js" />
+  <script src="../promisified-events.js" />
 
   <script type="application/javascript">
   <![CDATA[
@@ -20,45 +18,12 @@
     /**
      * Check name changed a11y event.
      */
-    function nameChangeChecker(aMsg, aID)
-    {
-      this.type = EVENT_NAME_CHANGE;
-
-      function targetGetter()
-      {
-        return getAccessible(aID);
-      }
-      Object.defineProperty(this, "target", { get: targetGetter });
-
-      this.getID = function getID()
-      {
-        return aMsg + " name changed";
-      }
-    }
-
-    function changeRichListItemChild()
-    {
-      this.invoke = function changeRichListItemChild_invoke()
-      {
-        getNode('childcontent').setAttribute('value', 'Changed.');
-      }
-
-      this.eventSeq =
-      [
-        new nameChangeChecker("changeRichListItemChild: ", "listitem")
-      ];
-
-      this.getID = function changeRichListItemChild_getID()
-      {
-        return "changeRichListItemChild";
-      }
-    }
-
-    function doTest()
-    {
-      var queue = new eventQueue();
-      queue.push(new changeRichListItemChild());
-      queue.invoke();
+    async function doTest() {
+      let changed = waitForEvent(EVENT_NAME_CHANGE, "listitem");
+      info("Changing childContent value");
+      getNode("childcontent").setAttribute("value", "Changed.");
+      await changed;
+      SimpleTest.finish();
     }
 
     SimpleTest.waitForExplicitFinish();
@@ -68,12 +33,6 @@
 
   <vbox flex="1" style="overflow: auto;">
     <body xmlns="http://www.w3.org/1999/xhtml">
-      <a target="_blank"
-        href="https://bugzilla.mozilla.org/show_bug.cgi?id=986054"
-        title="Propagate name change events">
-       Mozilla Bug 986054
-      </a>
-
       <p id="display"></p>
       <div id="content" style="display: none">
       </div>
