Bug 1932571 [wpt PR 49304] - [container] Add support for scroll-state(overflowing) axis, a=testonly
Automatic update from web-platform-tests
[container] Add support for scroll-state(overflowing) axis

Add new values for matching axis instead of edge for overflowing: block,
inline, x, y.

These are convenience keywords. For instance:

  scroll-state(overflowing: x)

is the same as:

  scroll-state((overflowing: left) or (overflowing: right))

Based on request in [1]

[1] https://github.com/w3c/csswg-drafts/issues/11183

Bug: 367764865
Change-Id: I125db5e5eced86da6404aa0bc5469830278d0ca9
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6022915
Reviewed-by: Anders Hartvoll Ruud <andruudchromium.org>
Commit-Queue: Rune Lillesveen <futharkchromium.org>
Cr-Commit-Position: refs/heads/main{#1386111}

--

wpt-commits: d486856789206e72535e8a0c2d341bd2d39b4af1
wpt-pr: 49304

UltraBlame original commit: 9ed5d61e8851988edf3eb21e4495ad379184b728

--- a/testing/web-platform/tests/css/css-conditional/container-queries/scroll-state/at-container-overflowing-parsing.html
+++ b/testing/web-platform/tests/css/css-conditional/container-queries/scroll-state/at-container-overflowing-parsing.html
@@ -21,6 +21,10 @@
   test_cq_condition_known('scroll-state(overflowing: inline-end)');
   test_cq_condition_known('scroll-state(overflowing: block-start)');
   test_cq_condition_known('scroll-state(overflowing: block-end)');
+  test_cq_condition_known('scroll-state(overflowing: block)');
+  test_cq_condition_known('scroll-state(overflowing: x)');
+  test_cq_condition_known('scroll-state(overflowing: y)');
+  test_cq_condition_known('scroll-state(overflowing: inline)');
   test_cq_condition_known('(scroll-state(overflowing: inline-end))');
   test_cq_condition_known('scroll-state((overflowing: left))');
   test_cq_condition_known('scroll-state(not ((overflowing: bottom) and (overflowing: right)))');
