Bug 1932649 [wpt PR 49311] - Make ConsumeNumberOrPercent() not crash on unresolvable calc()., a=testonly
Automatic update from web-platform-tests
Make ConsumeNumberOrPercent() not crash on unresolvable calc().

Instead of calling GetDoubleValue() on percentage calc expressions,
we just return them directly, and then add a new rule saying that
ComputeNumber() on them returns the percentage value divided by 100.
This avoids crashes when we try to force them during parsing.

This also takes us halfway towards fixing the opacity-valid.html test;
we no longer convert it into just a double (without surrounding calc()),
but since we don't properly simplify comparison expressions containing
percentages, we don't simplify as much as we should either, so the test
is still broken. (And even after that, we'd probably need to convert
percentages to decimals _inside calc_ for such properties.)

Change-Id: I8e0e25c35d3df82da75cfb1cf551d7f25d825696
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6037437
Reviewed-by: Anders Hartvoll Ruud <andruudchromium.org>
Commit-Queue: Steinar H Gunderson <sessechromium.org>
Cr-Commit-Position: refs/heads/main{#1386209}

--

wpt-commits: 27c7d18fbc2fe40c73688dcd6798820c4f95c647
wpt-pr: 49311

UltraBlame original commit: 6ef49a46449cd0ddc9bf2426221cb33ff55e7d7e

--- a/testing/web-platform/tests/compat/webkit-gradient-sign.html
+++ b/testing/web-platform/tests/compat/webkit-gradient-sign.html
@@ -7,4 +7,8 @@
 test(() => {
     assert_true(CSS.supports("background-image", "-webkit-gradient(linear, left top, left bottom, color-stop(calc(0.5 + 0.001 * sign(1em - 1px)), blue))"));
 });
+
+test(() => {
+    assert_true(CSS.supports("background-image", "-webkit-gradient(linear, left top, left bottom, color-stop(calc(50% + 0.001% * sign(1em - 1px)), blue))"));
+});
 </script>
