Bug 1932718 [wpt PR 49317] - DOM: Support disconnected->disconnected moveBefore(), a=testonly
Automatic update from web-platform-tests
DOM: Support disconnected->disconnected moveBefore()

Per discussion in https://github.com/whatwg/dom/pull/1307, we've
decided to support `moveBefore()` in the disconnected->disconnected
scenario. This CL enables and tests that.

R=nrosenthalchromium.org

Bug: 40150299
Change-Id: Ia0cf64a1a623c53ed5d9ae01b50b0e04f7028da2
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6037586
Reviewed-by: Noam Rosenthal <nrosenthalchromium.org>
Commit-Queue: Dominic Farolino <domchromium.org>
Cr-Commit-Position: refs/heads/main{#1386266}

--

wpt-commits: cf651adeb71bae989183845e3caba4c29bd1ade7
wpt-pr: 49317

UltraBlame original commit: 896ec93e57cc99760b1b83c4ddfb29c04dc8b46a

--- a/testing/web-platform/tests/dom/nodes/moveBefore/tentative/Node-moveBefore.html
+++ b/testing/web-platform/tests/dom/nodes/moveBefore/tentative/Node-moveBefore.html
@@ -237,4 +237,58 @@ test(() => {
   assert_equals(a.moveBefore(c, c), c);
   assert_array_equals(a.childNodes, [b, c]);
 }, "Inserting a node before itself should not move the node");
+
+test(() => {
+  const disconnectedOrigin = document.createElement('div');
+  const disconnectedDestination = document.createElement('div');
+  const p = disconnectedOrigin.appendChild(document.createElement('p'));
+
+  disconnectedDestination.moveBefore(p, null);
+
+  assert_equals(disconnectedDestination.firstChild, p, "<p> Was successfully moved");
+}, "Moving a node from a disconnected container to a disconnected new parent succeeds");
+
+test(() => {
+  const disconnectedOrigin = document.createElement('div');
+  const connectedDestination = document.body.appendChild(document.createElement('div'));
+  const p = disconnectedOrigin.appendChild(document.createElement('p'));
+
+  assert_throws_dom("HIERARCHY_REQUEST_ERR", () => connectedDestination.moveBefore(p, null));
+}, "Moving a node from disconnected->connected throws a HIERARCHY_REQUEST_ERR");
+
+test(() => {
+  const connectedOrigin = document.body.appendChild(document.createElement('div'));
+  const disconnectedDestination = document.createElement('div');
+  const p = connectedOrigin.appendChild(document.createElement('p'));
+
+  assert_throws_dom("HIERARCHY_REQUEST_ERR", () => disconnectedDestination.moveBefore(p, null));
+}, "Moving a node from connected->disconnected throws a HIERARCHY_REQUEST_ERR");
+
+promise_test(async t => {
+  let reactions = [];
+  const element_name = `ce-${performance.now()}`;
+  customElements.define(element_name,
+    class MockCustomElement extends HTMLElement {
+      connectedMoveCallback() { reactions.push("connectedMove"); }
+      connectedCallback() { reactions.push("connected"); }
+      disconnectedCallback() { reactions.push("disconnected"); }
+    });
+
+  const oldParent = document.createElement('div');
+  const newParent = document.createElement('div');
+  const element = oldParent.appendChild(document.createElement(element_name));
+  t.add_cleanup(() => {
+    element.remove();
+    newParent.remove();
+    oldParent.remove();
+  });
+
+  // Wait a microtask to let any custom element reactions run (should be none,
+  // since the initial parent is disconnected).
+  await Promise.resolve();
+
+  newParent.moveBefore(element, null);
+  await Promise.resolve();
+  assert_array_equals(reactions, []);
+}, "No custom element callbacks are run during disconnected moveBefore()");
 </script>
