Bug 1932834 [wpt PR 49329] - Fix failing WPTs introduced by https://crrev.com/c/5937916, a=testonly
Automatic update from web-platform-tests
Fix failing WPTs introduced by https://crrev.com/c/5937916

There are few failures introduced by WPT import in the editing component
where the editing includes forward-delete command alongwith the
white-space CSS properties. This CL fixes the failing WPTs by setting
the expectation as per the CSS specification linked below.

https: //www.w3.org/TR/css-text-3/#white-space-property
Bug: 373924023
Change-Id: I80d322fbafa9d3a592d80d78c43480f2e34b8485
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5953176
Reviewed-by: Koji Ishii <kojiichromium.org>
Reviewed-by: Siye Liu <siliumicrosoft.com>
Commit-Queue: Utkarsh Pathak <utpathakmicrosoft.com>
Cr-Commit-Position: refs/heads/main{#1386719}

--

wpt-commits: f69c9d92fbdbcacda06f85d3c609281f8f07462f
wpt-pr: 49329

UltraBlame original commit: afc7aa35603dea2a06bba9fdfe18c5007abd5aab

--- a/testing/web-platform/tests/editing/other/forwarddelete-before-invisible-line-break.html
+++ b/testing/web-platform/tests/editing/other/forwarddelete-before-invisible-line-break.html
@@ -32,94 +32,94 @@ addEventListener("load", () => {
   for (const data of [
     {
       initialInnerHTML: "<p>a[] <br></p>",
-      expected: "<p>a</p>",
+      expected: collapseWhiteSpaces ? "<p>a <br></p>" : "<p>a<br></p>",
     },
     {
       initialInnerHTML: "<p>a[ ]<br></p>",
-      expected: "<p>a</p>",
+      expected: collapseWhiteSpaces ? "<p>a <br></p>" : "<p>a<br></p>",
     },
     {
       initialInnerHTML: "<p>a []b<br></p>",
       expected: collapseWhiteSpaces
-        ? (useBR ? ["<p>a <br></p>", "<p>a&nbsp;</p>"] : ["<p>a <br></p>", "<p>a \n</p>", "<p>a&nbsp;</p>"])
-        : "<p>a </p>",
+        ? (useBR ? ["<p>a <br></p>", "<p>a&nbsp;<br></p>"] : ["<p>a <br></p>", "<p>a \n</p>", "<p>a&nbsp;<br></p>"])
+        : "<p>a <br></p>",
     },
     {
       initialInnerHTML: "<p>a [b]<br></p>",
       expected: collapseWhiteSpaces
-        ? (useBR ? ["<p>a <br></p>", "<p>a&nbsp;</p>"] : ["<p>a <br></p>", "<p>a \n</p>", "<p>a&nbsp;</p>"])
-        : "<p>a </p>",
+        ? (useBR ? ["<p>a <br></p>", "<p>a&nbsp;<br></p>"] : ["<p>a <br></p>", "<p>a \n</p>", "<p>a&nbsp;<br></p>"])
+        : "<p>a <br></p>",
     },
     {
       initialInnerHTML: "<p>a[] \n</p>",
-      expected: "<p>a</p>",
+      expected: collapseWhiteSpaces ? "<p>a \n</p>" : "<p>a\n</p>",
       skipIf: () => useBR,
     },
     {
       initialInnerHTML: "<p>a[ ]\n</p>",
-      expected: "<p>a</p>",
+      expected: collapseWhiteSpaces ? "<p>a \n</p>" : "<p>a\n</p>",
       skipIf: () => useBR,
     },
     {
       initialInnerHTML: "<p>a []b\n</p>",
       expected: collapseWhiteSpaces
-        ? ["<p>a \n</p>", "<p>a&nbsp;</p>"]
-        : "<p>a </p>",
+        ? ["<p>a \n</p>", "<p>a&nbsp;\n</p>"]
+        : "<p>a \n</p>",
       skipIf: () => useBR,
     },
     {
       initialInnerHTML: "<p>a [b]\n</p>",
       expected: collapseWhiteSpaces
-        ? ["<p>a \n</p>", "<p>a&nbsp;</p>"]
-        : "<p>a </p>",
+        ? ["<p>a \n</p>", "<p>a&nbsp;\n</p>"]
+        : "<p>a \n</p>",
       skipIf: () => useBR,
     },
     {
       initialInnerHTML: "<div>a[] <br><div>b</div></div>",
-      expected: "<div>a<div>b</div></div>",
+      expected: collapseWhiteSpaces ? "ab" : "<div>a<br><div>b</div></div>",
     },
     {
       initialInnerHTML: "<div>a[ ]<br><div>b</div></div>",
-      expected: "<div>a<div>b</div></div>",
+      expected: collapseWhiteSpaces ? "ab" : "<div>a<br><div>b</div></div>",
     },
     {
       initialInnerHTML: "<div>a []b<br><div>b</div></div>",
       expected: collapseWhiteSpaces
         ? (useBR
-          ? ["<div>a <br><div>b</div></div>", "<div>a&nbsp;<div>b</div></div>"]
-          : ["<div>a <br><div>b</div></div>", "<div>a \n<div>b</div></div>", "<div>a&nbsp;<div>b</div></div>"])
-        : "<div>a <div>b</div></div>",
+          ? ["<div>a <br><div>b</div></div>", "<div>a&nbsp;<br><div>b</div></div>"]
+          : ["<div>a <br><div>b</div></div>", "<div>a \n<div>b</div></div>", "<div>a&nbsp;<br><div>b</div></div>"])
+        : "<div>a <br><div>b</div></div>",
     },
     {
       initialInnerHTML: "<div>a [b]<br><div>b</div></div>",
       expected: collapseWhiteSpaces
         ? (useBR
-          ? ["<div>a <br><div>b</div></div>", "<div>a&nbsp;<div>b</div></div>"]
-          : ["<div>a <br><div>b</div></div>", "<div>a \n<div>b</div></div>", "<div>a&nbsp;<div>b</div></div>"])
-        : "<div>a <div>b</div></div>",
+          ? ["<div>a <br><div>b</div></div>", "<div>a&nbsp;<br><div>b</div></div>"]
+          : ["<div>a <br><div>b</div></div>", "<div>a \n<div>b</div></div>", "<div>a&nbsp;<br><div>b</div></div>"])
+        : "<div>a <br><div>b</div></div>",
     },
     {
       initialInnerHTML: "<div>a[] \n<div>b</div></div>",
-      expected: "<div>a<div>b</div></div>",
+      expected: collapseWhiteSpaces ? "ab" : "<div>a\n<div>b</div></div>",
       skipIf: () => useBR,
     },
     {
       initialInnerHTML: "<div>a[ ]\n<div>b</div></div>",
-      expected: "<div>a<div>b</div></div>",
+      expected: collapseWhiteSpaces ? "ab" : "<div>a\n<div>b</div></div>",
       skipIf: () => useBR,
     },
     {
       initialInnerHTML: "<div>a []b\n<div>b</div></div>",
       expected: collapseWhiteSpaces
-        ? ["<div>a \n<div>b</div></div>", "<div>a&nbsp;<div>b</div></div>"]
-        : "<div>a <div>b</div></div>",
+        ? ["<div>a \n<div>b</div></div>", "<div>a&nbsp;\n<div>b</div></div>"]
+        : "<div>a \n<div>b</div></div>",
       skipIf: () => useBR,
     },
     {
       initialInnerHTML: "<div>a [b]\n<div>b</div></div>",
       expected: collapseWhiteSpaces
-        ? ["<div>a \n<div>b</div></div>", "<div>a&nbsp;<div>b</div></div>"]
-        : "<div>a <div>b</div></div>",
+        ? ["<div>a \n<div>b</div></div>", "<div>a&nbsp;\n<div>b</div></div>"]
+        : "<div>a \n<div>b</div></div>",
       skipIf: () => useBR,
     },
   ]) {
